brush-parser/src/snapshots/brush_parser__tokenizer__tests__tokenize_complex_here_docs_in_command_substitution.snap
---
source: brush-parser/src/tokenizer.rs
expression: "test_tokenizer(r\"echo $(cat <<HERE1 <<HERE2 | wc -l\nTEXT\nHERE1\nOTHER\nHERE2\n)\")?"
---
TokenizerResult(
  input: "echo $(cat <<HERE1 <<HERE2 | wc -l\nTEXT\nHERE1\nOTHER\nHERE2\n)",
  result: [
    Word("echo", SourceSpan(
      start: SourcePosition(
        offset: 0,
        line: 1,
        column: 1,
      ),
      end: SourcePosition(
        offset: 4,
        line: 1,
        column: 5,
      ),
    )),
    Word("$(cat <<HERE1 <<HERE2 | wc -l\nTEXT\nHERE1\nOTHER\nHERE2\n)", SourceSpan(
      start: SourcePosition(
        offset: 5,
        line: 1,
        column: 6,
      ),
      end: SourcePosition(
        offset: 59,
        line: 6,
        column: 2,
      ),
    )),
  ],
)
