brush-parser/src/snapshots/brush_parser__tokenizer__tests__tokenize_here_doc_with_tab_removal.snap
---
source: brush-parser/src/tokenizer.rs
expression: "test_tokenizer(r\"cat <<-HERE\n\tSOMETHING\n\tHERE\n\")?"
---
TokenizerResult(
  input: "cat <<-HERE\n\tSOMETHING\n\tHERE\n",
  result: [
    Word("cat", SourceSpan(
      start: SourcePosition(
        offset: 0,
        line: 1,
        column: 1,
      ),
      end: SourcePosition(
        offset: 3,
        line: 1,
        column: 4,
      ),
    )),
    Operator("<<-", SourceSpan(
      start: SourcePosition(
        offset: 4,
        line: 1,
        column: 5,
      ),
      end: SourcePosition(
        offset: 7,
        line: 1,
        column: 8,
      ),
    )),
    Word("HERE", SourceSpan(
      start: SourcePosition(
        offset: 7,
        line: 1,
        column: 8,
      ),
      end: SourcePosition(
        offset: 11,
        line: 1,
        column: 12,
      ),
    )),
    Word("SOMETHING\n", SourceSpan(
      start: SourcePosition(
        offset: 12,
        line: 2,
        column: 1,
      ),
      end: SourcePosition(
        offset: 29,
        line: 4,
        column: 1,
      ),
    )),
    Word("HERE", SourceSpan(
      start: SourcePosition(
        offset: 29,
        line: 4,
        column: 1,
      ),
      end: SourcePosition(
        offset: 29,
        line: 4,
        column: 1,
      ),
    )),
    Operator("\n", SourceSpan(
      start: SourcePosition(
        offset: 11,
        line: 1,
        column: 12,
      ),
      end: SourcePosition(
        offset: 12,
        line: 2,
        column: 1,
      ),
    )),
  ],
)
