brush-parser/src/snapshots/brush_parser__tokenizer__tests__tokenize_multiple_here_docs.snap
---
source: brush-parser/src/tokenizer.rs
expression: "test_tokenizer(r\"cat <<HERE1 <<HERE2\nSOMETHING\nHERE1\nOTHER\nHERE2\necho after\n\")?"
---
TokenizerResult(
  input: "cat <<HERE1 <<HERE2\nSOMETHING\nHERE1\nOTHER\nHERE2\necho after\n",
  result: [
    Word("cat", SourceSpan(
      start: SourcePosition(
        offset: 0,
        line: 1,
        column: 1,
      ),
      end: SourcePosition(
        offset: 3,
        line: 1,
        column: 4,
      ),
    )),
    Operator("<<", SourceSpan(
      start: SourcePosition(
        offset: 4,
        line: 1,
        column: 5,
      ),
      end: SourcePosition(
        offset: 6,
        line: 1,
        column: 7,
      ),
    )),
    Word("HERE1", SourceSpan(
      start: SourcePosition(
        offset: 6,
        line: 1,
        column: 7,
      ),
      end: SourcePosition(
        offset: 11,
        line: 1,
        column: 12,
      ),
    )),
    Word("SOMETHING\n", SourceSpan(
      start: SourcePosition(
        offset: 20,
        line: 2,
        column: 1,
      ),
      end: SourcePosition(
        offset: 36,
        line: 4,
        column: 1,
      ),
    )),
    Word("HERE1", SourceSpan(
      start: SourcePosition(
        offset: 36,
        line: 4,
        column: 1,
      ),
      end: SourcePosition(
        offset: 36,
        line: 4,
        column: 1,
      ),
    )),
    Operator("<<", SourceSpan(
      start: SourcePosition(
        offset: 11,
        line: 1,
        column: 12,
      ),
      end: SourcePosition(
        offset: 14,
        line: 1,
        column: 15,
      ),
    )),
    Word("HERE2", SourceSpan(
      start: SourcePosition(
        offset: 14,
        line: 1,
        column: 15,
      ),
      end: SourcePosition(
        offset: 19,
        line: 1,
        column: 20,
      ),
    )),
    Word("OTHER\n", SourceSpan(
      start: SourcePosition(
        offset: 36,
        line: 4,
        column: 1,
      ),
      end: SourcePosition(
        offset: 48,
        line: 6,
        column: 1,
      ),
    )),
    Word("HERE2", SourceSpan(
      start: SourcePosition(
        offset: 48,
        line: 6,
        column: 1,
      ),
      end: SourcePosition(
        offset: 48,
        line: 6,
        column: 1,
      ),
    )),
    Operator("\n", SourceSpan(
      start: SourcePosition(
        offset: 19,
        line: 1,
        column: 20,
      ),
      end: SourcePosition(
        offset: 20,
        line: 2,
        column: 1,
      ),
    )),
    Word("echo", SourceSpan(
      start: SourcePosition(
        offset: 48,
        line: 6,
        column: 1,
      ),
      end: SourcePosition(
        offset: 52,
        line: 6,
        column: 5,
      ),
    )),
    Word("after", SourceSpan(
      start: SourcePosition(
        offset: 53,
        line: 6,
        column: 6,
      ),
      end: SourcePosition(
        offset: 58,
        line: 6,
        column: 11,
      ),
    )),
    Operator("\n", SourceSpan(
      start: SourcePosition(
        offset: 58,
        line: 6,
        column: 11,
      ),
      end: SourcePosition(
        offset: 59,
        line: 7,
        column: 1,
      ),
    )),
  ],
)
